ecmascript/parser/tests/test262-error-references/fail/e462669423ea79e4.js.stderr
error: Unexpected token Some(Word(import))
 --> $DIR/tests/test262-parser/fail/e462669423ea79e4.js:1:8
  |
1 | if (1) import "acorn";
  |        ^^^^^^

